# akc

./: .gitattributes  .gitignore  README.md  bench_akc_decode.py  pyproject.toml
docs/: akc-decode-optimization.md
lzxbuild/: __init__.py  lzx.py
native/lzx/: build.sh  lzxmodule.c
strata_akc_dump/: __init__.py  akc_codec.py  akc_tables.py  catalog.py  cli.py  dumper.py  lit.py  mspack_lzx.py  portable_akc.py  urls.py
tests/: test_catalog.py  test_lzx_fallback.py  test_lzx_huffman.py
